# Claude-Code-Analyzer

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  run.ps1  run.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: main.py
backend/src/api/: metrics.py  sessions.py  timeline.py
backend/src/db/: models.py  queries.py
backend/tests/: conftest.py  test_aggregations.py  test_api.py  test_queries.py
frontend/: Dockerfile  README.md  index.html  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ErrorBoundary.jsx  InsightsPanel.jsx
frontend/src/components/Charts/: ErrorDistribution.jsx  ScatterPlot.jsx  Timeline.jsx
frontend/src/components/Filters/: DateRange.jsx  LanguageFilter.jsx
frontend/src/hooks/: useMetrics.js  useSessions.js
frontend/src/pages/: Dashboard.jsx  SessionDetail.jsx  Sessions.jsx
frontend/src/styles/: globals.css
monitor/: .env.example  Dockerfile  README.md  pyproject.toml
monitor/src/: db.py  detector.py  logger.py  main.py  reader.py  seed.py  utils.py
monitor/tests/: test_db.py  test_utils.py
shared/: constants.py  db_schema.sql
