[project]
name = "claude-code-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for Claude Code analytics"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]
